* README * Исправлен баг: удаление папки SystemUI и инсталляция фреймов перед каждым шагом

--- a/README
+++ b/README
@@ -17,11 +17,11 @@
 		\framework\ - пустая папка для файлов фреймворка
 
 	Инструменты
-		Инструменты скачиваются отдельно отсюда: https://github.com/spellcaster/Android_APKTools/archive/master.zip. Распаковать архив в директорию пакета.
+		Инструменты скачиваются отдельно отсюда: https://github.com/spellcaster/Android_APKTools/archive/master.zip. Извлечь ФАЙЛЫ в директорию пакета.
 
-		\APK_worker.bat - главный скрипт
-		\qpid_repl.js - скрипт для замены id в qpids.smali (запускается из APK_worker)
-		\xml_add.js - скрипт для манипуляций с xml (запускается из APK_worker)
+		\SysUI_worker.bat - главный скрипт
+		\qpid_repl.js - скрипт для замены id в qpids.smali (запускается из SysUI_worker)
+		\xml_add.js - скрипт для манипуляций с xml (запускается из SysUI_worker)
 	
 	Разное:
 		\README - этот файл
@@ -31,17 +31,21 @@
 
 ПРИМЕНЕНИЕ:
 
-1) Скачать с целевого девайса файлы /system/framework/*.apk (ВСЕ файлы с расширением apk!) (поместить в папку \framework) и /system/app/SystemUI.apk, поместить рядом с файлами Пакета.
+1) Поместить файлы пакета в отдельную директорию.
 
-2) Запустить APK_worker.bat
+2) Скачать архив с инструментами (утилитами) отсюда: https://github.com/spellcaster/Android_APKTools/archive/master.zip, извлечь файлы в директорию пакета (т.е. файлы инструментов должны лежать рядом с файлами пакета).
 
-3) Указать режим: с фонариком или без
+3) Скачать с целевого девайса файлы /system/framework/*.apk (ВСЕ файлы с расширением apk!) (поместить в папку \framework) и /system/app/SystemUI.apk, поместить рядом с файлами Пакета.
 
-4) Для начала попробовать выполнить в автоматическом режиме (Step = 0). Пошаговый режим - для отладки, если возникают ошибки
+4) Запустить SysUI_worker.bat
 
-5) Если всё благополучно, скрипт завершится без ошибок, а итоговое приложение будет сохранено как SystemUI_mod.apk. Если всё плохо :) - будут выданы ошибки. Желательно попробовать разобраться самим (например, если ошибка при сборке - почитать, на что именно ругается, возможно, при модификации были допущены ошибки). Если не получается - надо скопировать полный лог запуска (правая кнопка мыши - Изменить - Пометить, выделить весь текст с момента запуска скрипта, нажать Enter) и запостить в указанной теме на 4pda. Можно спросить у меня в личке, но в этом не очень много смысла, т.к. я слабо разбираюсь в природе процесса, просто автоматизировал инструкцию sk0t. Т.ч. будьте готовы, к редиректу в ту же самую тему :).
+5) Указать режим: с фонариком или без
+
+6) Для начала попробовать выполнить в автоматическом режиме (Step = 0). Пошаговый режим - для отладки, если возникают ошибки
+
+7) Если всё благополучно, скрипт завершится без ошибок, а итоговое приложение будет сохранено как SystemUI_mod.apk. Если всё плохо :) - будут выданы ошибки. Желательно попробовать разобраться самим (например, если ошибка при сборке - почитать, на что именно ругается, возможно, при модификации были допущены ошибки). Если не получается - надо скопировать полный лог запуска (правая кнопка мыши - Изменить - Пометить, выделить весь текст с момента запуска скрипта, нажать Enter) и запостить в указанной теме на 4pda. Можно спросить у меня в личке, но в этом не очень много смысла, т.к. я слабо разбираюсь в природе процесса, просто автоматизировал инструкцию sk0t. Т.ч. будьте готовы, к редиректу в ту же самую тему :).
 	
-6) Записать из-под рекавери SystemUI_mod.apk на целевой девайс в /system/app (предварительно переименовать в SystemUI.apk). Перегрузить девайс.
+8) Записать из-под рекавери SystemUI_mod.apk на целевой девайс в /system/app (предварительно переименовать в SystemUI.apk). Перегрузить девайс.
 Через adb это делается так:
 	adb reboot recovery
 	смонтировать /system через интерфейс рекавери (должно как-то выполняться командой, mount что-то там, но неохота искать)
@@ -49,12 +53,12 @@
 	adb reboot
 Можно и "на горячую" - adb push SystemUI_mod.apk /system/app/SystemUI.apk при включённом и загруженном девайсе, но есть опасность глюков.
 
-7) Если возникнут ошибки запуска com.android.statusbar, посмотреть лог (выполнить в эмуляторе терминала на целевом девайсе либо через adb shell)
+9) Если возникнут ошибки запуска com.android.statusbar, посмотреть лог (выполнить в эмуляторе терминала на целевом девайсе либо через adb shell)
 	logcat
 Сохранить лог в файл:
 	logcat > /sdcard/err.log
 
-8) Поставить приложение QuickPanelSettings
+10) Поставить приложение QuickPanelSettings
 
 ПРИМ.
 
